--- a/web/template.xhtml
+++ b/web/template.xhtml
@@ -6,7 +6,7 @@
     <h:head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <title><ui:insert name="title">Default Title</ui:insert></title>
-<h:outputStylesheet name="css/jsfcrud.css"/>
+        <h:outputStylesheet name="css/jsfcrud.css"/>
     </h:head>
 
     <h:body>
@@ -16,6 +16,15 @@
         <p>
             <ui:insert name="body">Default Body</ui:insert>
         </p>
+        <hr/>
+        <h:form>
+            <h:panelGrid columns="3">
+                <h:commandLink value="シナリオ一覧に戻る" action="#{templateControl.prepareScenarioList}" immediate="true" />
+            <h:outputLabel> / </h:outputLabel>
+                
+            <h:commandLink value="インデックスに戻る" action="#{templateControl.prepareIndex}" immediate="true" />        
+            </h:panelGrid>            
+        </h:form>
     </h:body>
-
+    
 </html>
